--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,10 @@ a {
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .logo-part {
@@ -101,6 +105,7 @@ a {
 }
 
 .site-nav .link {
+  position: relative;
   display: block;
   color: var(--title-color);
   font-weight: 500;
@@ -110,6 +115,9 @@ a {
   text-decoration: none;
   padding-top: 32px;
   padding-bottom: 32px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link:hover,
@@ -117,9 +125,27 @@ a {
   color: var(--accent-color);
 }
 
+.site-nav .item {
+ 
+}
+
 .site-nav .link.current {
   color: var(--accent-color);
 }
+
+.site-nav .link.current::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: var(--accent-color);
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  opacity: 1;
+}
+
 
 .auth-nav {
   display: flex;
@@ -144,12 +170,14 @@ a {
   letter-spacing: 0.02em;
   text-decoration: none;
   align-items: center;
+  transition-property: color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .auth-nav .link:hover,
 .auth-nav .link:focus {
   color: var(--accent-color);
-  fill: var(--accent-color);
 }
 
 .icon.mail,
@@ -221,6 +249,9 @@ a {
   padding: 10px 32px;
   text-align: center;
   border: 1px solid transparent;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero .button:hover,
@@ -309,6 +340,29 @@ a {
   gap: 30px;
 }
 
+.works .items {
+  position: relative;
+}
+
+.works .img-desc {
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  padding: 27px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.img-overlay-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--button-text-color);
+}
+
 /* TEAM */
 
 .section.team {
@@ -364,6 +418,9 @@ a {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  transition-property: background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-list .link:hover,
@@ -403,6 +460,9 @@ a {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   outline: transparent;
+  transition-property: border, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients .link:hover,
@@ -453,6 +513,9 @@ a {
   margin-bottom: 9px;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list .link.tel {
@@ -497,6 +560,9 @@ a {
   justify-content: center;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-links .icon {
@@ -533,6 +599,9 @@ a {
   line-height: 1.62;
   cursor: pointer;
   border-radius: 4px;
+  transition-property: color, background-color, box-schadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filters .button:hover,
@@ -553,7 +622,7 @@ a {
 
 .button.secondary {
   color: var(--title-color);
-  background-color: #f5f4fa;
+  background-color: var(--secondary-background-color);
   border-color: transparent;
 }
 
@@ -569,11 +638,63 @@ a {
 .projects .poject {
   width: 370px;
   height: 404px;
+  overflow: hidden;
 }
 
 .project-link {
   display: block;
   outline: transparent;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+.project-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-thumb::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 294px;
+  top: 294px;
+  left: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.thumb-text {
+  position: absolute;
+  top: 294px;
+  left: 0;
+  width: 100%;
+  padding: 63px 24px;
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.75;
+  color: var(--button-text-color);
+  z-index: 1;
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-link:hover ::after,
+.project-link:focus ::after {
+  transform: translateY(-294px);
+  opacity: 1;
+}
+
+.project-link:hover .thumb-text,
+.project-link:focus .thumb-text {
+  transform: translateY(-294px);
+  opacity: 1;
 }
 
 .project-link:hover,
@@ -605,3 +726,58 @@ a {
   font-size: 16px;
   line-height: 1.87;
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); ;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: translateX(-50%) translateY(-70%);
+}
+
+
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  top: 50%;
+  left: 50%;
+  transform:scale(1);
+  transform:  translateX(-50%) translateY(-50%);
+  background: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: opacity 400ms cubic-bezier(0.4, 0, 0.2, 1), transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--primary-background-color);
+  margin-top: 8px;
+  margin-right: 8px;
+}
+
