--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,9 @@ a {
 .icon.mail,
 .icon.phone {
   fill: var(--primary-text-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .auth-nav .link:hover .icon.mail,
@@ -345,7 +348,7 @@ a {
 }
 
 .works .img-desc {
-  width: 370px;
+  width: 100%;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
   padding: 27px;
@@ -418,7 +421,7 @@ a {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  transition-property: background-color, fill;
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -432,6 +435,9 @@ a {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-list .link:hover .icon,
@@ -460,7 +466,7 @@ a {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   outline: transparent;
-  transition-property: border, fill;
+  transition-property: border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -474,6 +480,9 @@ a {
   fill: #afb1b8;
   width: 106px;
   height: 60px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients .link:hover .icon-client,
@@ -599,7 +608,7 @@ a {
   line-height: 1.62;
   cursor: pointer;
   border-radius: 4px;
-  transition-property: color, background-color, box-schadow;
+  transition-property: color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -660,7 +669,7 @@ a {
   position: absolute;
   width: 100%;
   height: 294px;
-  top: 294px;
+  top: 100%;
   left: 0;
   background-color: rgba(33, 150, 243, 0.9);
   transition-property: transform;
@@ -670,7 +679,7 @@ a {
 
 .thumb-text {
   position: absolute;
-  top: 294px;
+  top: 100%;
   left: 0;
   width: 100%;
   padding: 63px 24px;
@@ -687,7 +696,7 @@ a {
 
 .project-link:hover ::after,
 .project-link:focus ::after {
-  transform: translateY(-294px);
+  transform: translateY(-100%);
   opacity: 1;
 }
 
@@ -735,6 +744,7 @@ a {
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  visibility: visible;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 
@@ -745,7 +755,6 @@ a {
 }
 
 .backdrop.is-hidden .modal {
-  opacity: 0;
   transform: translateX(-50%) translateY(-70%);
 }
 
@@ -762,7 +771,7 @@ a {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: opacity 400ms cubic-bezier(0.4, 0, 0.2, 1), transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button {
