--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,6 @@ a {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .logo-part {
@@ -126,7 +125,6 @@ a {
 }
 
 .site-nav .item {
- 
 }
 
 .site-nav .link.current {
@@ -145,7 +143,6 @@ a {
   left: 0;
   opacity: 1;
 }
-
 
 .auth-nav {
   display: flex;
@@ -542,6 +539,11 @@ a {
   display: flex;
   gap: 10px;
 }
+/* 
+.socials {
+  display: flex;
+  gap: 93px;
+} */
 
 .item.socials {
   padding-top: 72px;
@@ -551,7 +553,7 @@ a {
   /* } */
 }
 
-.socials .title {
+.footer-title {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -583,6 +585,13 @@ a {
 .socials-links .link:hover,
 .socials-links .link:focus {
   background-color: var(--accent-color);
+}
+
+/* Sign up */
+
+.item .sign-up {
+  padding-bottom: 72px;
+  padding-bottom: 94px;
 }
 
 /* PORTFOLIO */
@@ -656,7 +665,7 @@ a {
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
 .project-thumb {
   position: relative;
@@ -745,7 +754,8 @@ a {
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); ;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -756,8 +766,8 @@ a {
 
 .backdrop.is-hidden .modal {
   transform: translateX(-50%) translateY(-70%);
+  opacity: 0;
 }
-
 
 .modal {
   position: absolute;
@@ -765,13 +775,15 @@ a {
   height: 581px;
   top: 50%;
   left: 50%;
-  transform:scale(1);
-  transform:  translateX(-50%) translateY(-50%);
+  opacity: 1;
+  transform: translateX(-50%) translateY(-50%);
   background: var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 40px;
 }
 
 .modal-button {
@@ -790,3 +802,33 @@ a {
   margin-right: 8px;
 }
 
+.form-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--title-color);
+  margin-bottom: 12px;
+}
+
+.form-field {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.form-field.textarea {
+  display: block;
+  margin-bottom: 14px;
+  height: 117px;
+}
+
+.form-label {
+  margin-bottom: 4px;
+}
+.form-input {
+  width: 100%;
+  height: 40px;
+  padding: 11px 12px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
